Added RobinHood details page and ann as Team member

--- a/index.html
+++ b/index.html
@@ -385,11 +385,11 @@
               <img src="assets/img/portfolio/RobinHoodPoster.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Robin Hood</h4>
-                <!-- <p>App</p>
+                <!-- <p>App</p> -->
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/RobinHoodPoster.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-                </div> -->
+                  <!-- <a href="assets/img/portfolio/RobinHoodPoster.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a> -->
+                  <a href="RobinHood-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                </div>
               </div>
             </div>
           </div>
@@ -632,6 +632,24 @@
               <div class="member-info">
                 <h4>Austin Stephens</h4>
                 <span>CTO</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+            <div class="member" data-aos="fade-up" data-aos-delay="300">
+              <div class="member-img">
+                <img src="assets/img/team/Anne.JPG" class="img-fluid" alt="">
+                <div class="social">
+                  <a href=""><i class="bi bi-twitter"></i></a>
+                  <a href=""><i class="bi bi-facebook"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>Anne Coppard</h4>
+                <span>Secretary</span>
               </div>
             </div>
           </div>
