--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>PADS Paulton Amateur Dramatics</title>
-  <meta content="" name="description">
+  <meta content="A Paulton based amateur dramatics company performing multiple times per year" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
