--- a/index.html
+++ b/index.html
@@ -399,11 +399,11 @@
               <img src="assets/img/portfolio/served.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Are you being served</h4>
-                <!-- <p>Card</p>
+                <!-- <p>Card</p> -->
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/served.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-                </div> -->
+                  <!-- <a href="assets/img/portfolio/served.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a> -->
+                  <a href="Served-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                </div>
               </div>
             </div>
           </div>
