Added Murder details

--- a/index.html
+++ b/index.html
@@ -371,11 +371,11 @@
               <img src="assets/img/portfolio/Murder.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>This Business of Murder</h4>
-                <!-- <p>Web</p>
+                <!-- <p>Web</p> -->
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/Murder.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-                </div> -->
+                  <!-- <a href="assets/img/portfolio/Murder.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a> -->
+                  <a href="Murder-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                </div>
               </div>
             </div>
           </div>
