--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
 
-      <a href="#services" class="get-started-btn scrollto">Next Show</a>
+      <a href="#nextshow" class="get-started-btn scrollto">Next Show</a>
 
     </div>
   </header><!-- End Header -->
@@ -119,7 +119,7 @@
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
             <i class="ri-calendar-todo-line"></i>
-            <h3><a href="#services">Upcoming Events</a></h3>
+            <h3><a href="#nextshow">Upcoming Events</a></h3>
           </div>
         </div>
       </div>
@@ -676,6 +676,34 @@
 
       </div>
     </section><!-- End Team Section -->
+
+    <!-- ======= NextShow Section ======= -->
+    <section id="nextshow" class="about">
+      <div class="container" data-aos="fade-up">
+
+        <div class="section-title">
+          <h2>Coming Up!</h2>
+          <p>February 2023</p>
+        </div>
+
+        <div class="row">
+
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+            <div class="member" data-aos="fade-up" data-aos-delay="100">
+              <div class="member-img">
+                <img src="assets/img/Cinderella/Poster.jpg" class="img-fluid" alt="">
+              </div>
+              <div class="member-info">
+                <h4>Cinderella</h4>
+                <span>Tickets: <a href="https://www.ticketsource.co.uk/paultonamateurdramatics" target="_blank" rel="noopener">TicketSource</a></span>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+    </section><!-- End About Section -->
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
