--- a/index.html
+++ b/index.html
@@ -312,6 +312,18 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/Cinderella2023.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Cinderella 2023</h4>
+                <div class="portfolio-links">
+                  <a href="Cinderella2023-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
               <img src="assets/img/portfolio/Aladdin.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Aladdin</h4>
@@ -683,7 +695,7 @@
 
         <div class="section-title">
           <h2>Coming Up!</h2>
-          <p>February 2023</p>
+          <p>Auditions - 15th April 2023</p>
         </div>
 
         <div class="row">
@@ -691,11 +703,11 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="100">
               <div class="member-img">
-                <img src="assets/img/Cinderella/Poster.jpg" class="img-fluid" alt="">
+                <img src="assets/img/Auditions/Singing.gif" class="img-fluid" alt="">
               </div>
               <div class="member-info">
-                <h4>Cinderella</h4>
-                <span>Tickets: <a href="https://www.ticketsource.co.uk/paultonamateurdramatics" target="_blank" rel="noopener">TicketSource</a></span>
+                <h4>Fancy being in the show?</h4>
+                <span><p>Auditions for our next show will be on Saturday 15th April which will be a musical based project. More details will appear here soon.</p></span>
               </div>
             </div>
           </div>
