--- a/index.html
+++ b/index.html
@@ -138,19 +138,30 @@
             <img src="assets/PADsPics/Group.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right" data-aos-delay="100">
-            <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h3>
+            <h3>Paulton Amateur Dramatics Society was founded in the year 2000 with a performance of Oliver!</h3>
             <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              Over the years the group has bought much entertainment to the villagers of Paulton and surrounding towns with performances such as:
             </p>
             <ul>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-              <li><i class="ri-check-double-line"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
+              <li><i class="ri-check-double-line"></i> Much ado about Nothing</li>
+              <li><i class="ri-check-double-line"></i> Chaucer</li>
+              <li><i class="ri-check-double-line"></i> Alice in Wonderland</li>
+              <li><i class="ri-check-double-line"></i> Allo Allo</li>
+              <li><i class="ri-check-double-line"></i> Sweeny Todd</li>
+              <li><i class="ri-check-double-line"></i> Stags and Hens</li>
+              <li><i class="ri-check-double-line"></i> Cold Comfort Farm</li>
+              <li><i class="ri-check-double-line"></i> Midsummer Nights Dream</li>
+              <li><i class="ri-check-double-line"></i> Dads Army</li>
+              <li><i class="ri-check-double-line"></i> Habéis Corpus</li>
+              <li><i class="ri-check-double-line"></i> Hi-de-Hi</li>
+              <li><i class="ri-check-double-line"></i> Are You Being Served</li>
             </ul>
             <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident
+              In more recent years the formation of the talented PADs Youth Group bought to the stage childrens’ 
+              performances of Terry Pratchett’s ‘Johnny and the Dead’ and Roald Dahl’s ‘Fantastic Mr Fox’.
+            </p>
+            <p>
+              The society now performs two shows a year, one being our much anticipated and highly popular Pantomime in February half term.
             </p>
           </div>
         </div>
@@ -159,25 +170,25 @@
     </section><!-- End About Section -->
 
     <!-- ======= Clients Section ======= -->
-    <section id="clients" class="clients">
-      <div class="container" data-aos="zoom-in">
+    <!-- <section id="clients" class="clients"> -->
+      <!-- <div class="container" data-aos="zoom-in">
 
         <div class="clients-slider swiper">
           <div class="swiper-wrapper align-items-center">
             <div class="swiper-slide"><img src="assets/PADsPics/award1.png" class="img-fluid" alt=""></div>
             <div class="swiper-slide"><img src="assets/PADsPics/award2.png" class="img-fluid" alt=""></div>
             <div class="swiper-slide"><img src="assets/PADsPics/award3.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/PADsPics/award4.png" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="assets/PADsPics/award4.png" class="img-fluid" alt=""></div> -->
             <!-- <div class="swiper-slide"><img src="assets/img/clients/client-5.png" class="img-fluid" alt=""></div>
             <div class="swiper-slide"><img src="assets/img/clients/client-6.png" class="img-fluid" alt=""></div>
             <div class="swiper-slide"><img src="assets/img/clients/client-7.png" class="img-fluid" alt=""></div>
             <div class="swiper-slide"><img src="assets/img/clients/client-8.png" class="img-fluid" alt=""></div> -->
-          </div>
+          <!-- </div>
           <div class="swiper-pagination"></div>
-        </div>
+        </div> -->
 
-      </div>
-    </section><!-- End Clients Section -->
+      <!-- </div>
+    </section>End Clients Section -->
 
     <!-- ======= Features Section ======= -->
     <!-- <section id="features" class="features">
@@ -280,9 +291,11 @@
       <div class="container" data-aos="zoom-in">
 
         <div class="text-center">
-          <h3>Join our Team</h3>
-          <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <a class="cta-btn" href="#">Join our Team</a>
+          <h3>Drama club</h3>
+          <p> We run a 12 week Drama club for children aged 8-12 years which introduces them to all aspects of drama; 
+            promotes self esteem and confidence; and encourages children to reach their full potential. 
+            New members are always welcome to join our social and friendly group.</p>
+          <a class="cta-btn" href="#contact">Ask about our Drama Club</a>
         </div>
 
       </div>
@@ -515,11 +528,11 @@
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-                <h3>Saul Goodman</h3>
-                <h4>Ceo &amp; Founder</h4>
+                <h3>Lillian Maria</h3>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Paulton Amateur Dramatics are absolutely hilarious. I have never missed a show and I have never been disappointed.
+                  Cinderella Panto was absolutely brilliant! I enjoyed it immensely and cannot wait for the next 
+                  PADS production. 
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
@@ -528,11 +541,10 @@
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-                <h3>Sara Wilsson</h3>
-                <h4>Designer</h4>
+                <h3>Wendy Luton</h3>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  What a great bunch of people. My daughter always joins in on the yearly big show and she is always looked after. The shows are really great for her confidence and when finished she can't wait to start in the next one.
+                  I loved the Cinderella Pantomime, can't wait for the next performance from PADS.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
@@ -541,11 +553,34 @@
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-                <h3>Jena Karlis</h3>
-                <h4>Store Owner</h4>
+                <h3>Samantha Paisey</h3>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  For a team of this size, they definately know what they are doing and they do it amazingly well.
+                  You all did an amazing show. My girl Ella really enjoyed it and can't wait till next one. Thank you for making this possible
+                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                </p>
+              </div>
+            </div><!-- End testimonial item -->
+
+            <div class="swiper-slide">
+              <div class="testimonial-item">
+                <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
+                <h3>Jennifer Pearce</h3>
+                <p>
+                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                  Really enjoyed the show, well done to all the cast & all involved.
+                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                </p>
+              </div>
+            </div><!-- End testimonial item -->
+
+            <div class="swiper-slide">
+              <div class="testimonial-item">
+                <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
+                <h3>Janet Dera</h3>
+                <p>
+                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                  Very good show tonight. Enjoyed the show! Good local entertainment!
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
