Added Team Members

--- a/index.html
+++ b/index.html
@@ -629,70 +629,40 @@
 
         <div class="row">
 
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+          <div class="col-lg-2 col-md-4 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="100">
               <div class="member-img">
-                <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="">
-                <div class="social">
+                <img src="assets/img/team/Clare.jpg" class="img-fluid" alt="">
+                <!-- <div class="social">
                   <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
                   <a href=""><i class="bi bi-instagram"></i></a>
                   <a href=""><i class="bi bi-linkedin"></i></a>
-                </div>
+                </div> -->
               </div>
               <div class="member-info">
-                <h4>Ian Rogers</h4>
-                <span>Chief Executive Officer</span>
+                <h4>Clare Ivory</h4>
+                <span>Chairwoman</span>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+          <div class="col-lg-2 col-md-4 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="200">
               <div class="member-img">
-                <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="">
-                <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
-                </div>
+                <img src="assets/img/team/Gemma.jpg" class="img-fluid" alt="">
               </div>
               <div class="member-info">
-                <h4>John Turner</h4>
-                <span>Product Manager</span>
+                <h4>Gemma Turner</h4>
+                <span>Vice Chair</span>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-            <div class="member" data-aos="fade-up" data-aos-delay="300">
-              <div class="member-img">
-                <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
-                <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
-                </div>
-              </div>
-              <div class="member-info">
-                <h4>Austin Stephens</h4>
-                <span>CTO</span>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+          <div class="col-lg-2 col-md-4 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="300">
               <div class="member-img">
                 <img src="assets/img/team/Anne.JPG" class="img-fluid" alt="">
-                <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
-                </div>
               </div>
               <div class="member-info">
                 <h4>Anne Coppard</h4>
@@ -701,23 +671,114 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-            <div class="member" data-aos="fade-up" data-aos-delay="400">
+          <div class="col-lg-2 col-md-4 d-flex align-items-stretch">
+            <div class="member" data-aos="fade-up" data-aos-delay="300">
               <div class="member-img">
-                <img src="assets/img/team/team-4.jpg" class="img-fluid" alt="">
-                <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
-                </div>
+                <img src="assets/img/team/Austin.jpg" class="img-fluid" alt="">
               </div>
               <div class="member-info">
-                <h4>Clare Ivory</h4>
-                <span>Accountant</span>
+                <h4>Austin Stephens</h4>
+                <span>Resident Director</span>
               </div>
             </div>
           </div>
+
+          <div class="col-lg-2 col-md-4 d-flex align-items-stretch">
+            <div class="member" data-aos="fade-up" data-aos-delay="400">
+              <div class="member-img">
+                <img src="assets/img/team/Ian.jpg" class="img-fluid" alt="">
+              </div>
+              <div class="member-info">
+                <h4>Ian Rogers</h4>
+                <span>Musical Director</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-2 col-md-4 d-flex align-items-stretch">
+            <div class="member" data-aos="fade-up" data-aos-delay="100">
+              <div class="member-img">
+                <img src="assets/img/team/josef.jpg" class="img-fluid" alt="">
+              </div>
+              <div class="member-info">
+                <h4>Josef Harle</h4>
+                <span>Technical Sound Director</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-2 col-md-4 d-flex align-items-stretch">
+            <div class="member" data-aos="fade-up" data-aos-delay="100">
+              <div class="member-img">
+                <img src="assets/img/team/Andy.JPG" class="img-fluid" alt="">
+              </div>
+              <div class="member-info">
+                <h4>Andy Patterson</h4>
+                <span>Technical Light Director</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-2 col-md-4 d-flex align-items-stretch">
+            <div class="member" data-aos="fade-up" data-aos-delay="100">
+              <div class="member-img">
+                <img src="assets/img/team/Sadie.jpg" class="img-fluid" alt="">
+              </div>
+              <div class="member-info">
+                <h4>Sadie Stephens</h4>
+                <span>Marketing/Media Director</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-2 col-md-4 d-flex align-items-stretch">
+            <div class="member" data-aos="fade-up" data-aos-delay="100">
+              <div class="member-img">
+                <img src="assets/img/team/Sue.JPG" class="img-fluid" alt="">
+              </div>
+              <div class="member-info">
+                <h4>Sue Granger</h4>
+                <span>Costume Director</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-2 col-md-4 d-flex align-items-stretch">
+            <div class="member" data-aos="fade-up" data-aos-delay="100">
+              <div class="member-img">
+                <img src="assets/img/team/Dave.jpg" class="img-fluid" alt="">
+              </div>
+              <div class="member-info">
+                <h4>Dave Sherborne</h4>
+                <span>Treasurer</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-2 col-md-4 d-flex align-items-stretch">
+            <div class="member" data-aos="fade-up" data-aos-delay="100">
+              <div class="member-img">
+                <img src="assets/img/team/Amy.JPG" class="img-fluid" alt="">
+              </div>
+              <div class="member-info">
+                <h4>Sadie Potts/Amy Payne</h4>
+                <span>Backstage Directors</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-2 col-md-4 d-flex align-items-stretch">
+            <div class="member" data-aos="fade-up" data-aos-delay="100">
+              <div class="member-img">
+                <img src="assets/img/team/Joe.jpg" class="img-fluid" alt="">
+              </div>
+              <div class="member-info">
+                <h4>Joe Mitchell</h4>
+                <span>Show Budgets Director</span>
+              </div>
+            </div>
+          </div>
+
 
         </div>
 
@@ -730,19 +791,19 @@
 
         <div class="section-title">
           <h2>Coming Up!</h2>
-          <p>Auditions - 15th April 2023</p>
+          <p>Musical through the ages - 22nd - 23rd September 2023</p>
         </div>
 
         <div class="row">
 
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+          <div class="col-lg-2 col-md-4 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="100">
               <div class="member-img">
                 <img src="assets/img/Auditions/Singing.gif" class="img-fluid" alt="">
               </div>
               <div class="member-info">
-                <h4>Fancy being in the show?</h4>
-                <span><p>Auditions for our next show will be on Saturday 15th April which will be a musical based project. More details will appear here soon.</p></span>
+                <h4>Oliver!, Sound of Music, Chitty Chitty Bang Bang, Mary Poppins</h4>
+                <span><p>Our next show will be held at Paulton Rovers and will be a musical based project. Containing songs from your favourite musicals</p></span>
               </div>
             </div>
           </div>
@@ -783,9 +844,9 @@
               </div>
 
               <div class="phone">
-                <i class="bi bi-phone"></i>
-                <h4>Call:</h4>
-                <p>07709 456789</p>
+                <a href = "https://www.facebook.com/profile.php?id=100041475437622"><i class="bi bi-facebook"></a></i>
+                <h4>Facebook:</h4>
+                <p>PADS Paulton Amateur Dramatics</p>
               </div>
 
             </div>
@@ -837,8 +898,6 @@
               <h3>PADS<span>.</span></h3>
               <p>
                 Paulton Rovers Football Club <br>
-                Paulton<br><br>
-                <strong>Phone:</strong> 07709 456789<br>
                 <strong>Email:</strong> paultonamateurdramatics@gmail.com<br>
               </p>
               <div class="social-links mt-3">
