--- a/index.html
+++ b/index.html
@@ -802,7 +802,7 @@
                 <img src="assets/img/Auditions/Singing.gif" class="img-fluid" alt="">
               </div>
               <div class="member-info">
-                <h4>Oliver!, Sound of Music, Chitty Chitty Bang Bang, Mary Poppins</h4>
+                <h4>Oliver!, Sound of Music and Mary Poppins</h4>
                 <span><p>Our next show will be held at Paulton Rovers and will be a musical based project. Containing songs from your favourite musicals</p></span>
               </div>
             </div>
