Uploading Cinderella pictures

--- a/Cinderella2023-details.html
+++ b/Cinderella2023-details.html
@@ -108,72 +108,124 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/Cinderella/Greg.JPG" alt="">
-                </div>
-
-                <!-- <div class="swiper-slide">
-                  <img src="assets/img/MurderBusiness/079665791244349_n.jpg" alt="">
+                  <img src="assets/img/Cinderella/IMG_6757.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/MurderBusiness/2223290861751_n.jpg" alt="">
+                  <img src="assets/img/Cinderella/IMG_6766.JPG" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/MurderBusiness/32332727884827634_n.jpg" alt="">
+                  <img src="assets/img/Cinderella/IMG_6774.JPG" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/MurderBusiness/3314507511320_n.jpg" alt="">
+                  <img src="assets/img/Cinderella/IMG_6779.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/MurderBusiness/35448037816979_n.jpg" alt="">
+                  <img src="assets/img/Cinderella/IMG_6780.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/MurderBusiness/3980668861413_n.jpg" alt="">
+                  <img src="assets/img/Cinderella/IMG_6783.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/MurderBusiness/4222416706189901_n.jpg" alt="">
+                  <img src="assets/img/Cinderella/IMG_6785.JPG" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/MurderBusiness/44171300276787_n.jpg" alt="">
+                  <img src="assets/img/Cinderella/IMG_6788.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/MurderBusiness/592733924_n.jpg" alt="">
+                  <img src="assets/img/Cinderella/IMG_6790.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/MurderBusiness/6587989573_n.jpg" alt="">
+                  <img src="assets/img/Cinderella/IMG_6793.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/MurderBusiness/65937252507536_n.jpg" alt="">
+                  <img src="assets/img/Cinderella/IMG_6795.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/MurderBusiness/7296975770023323_n.jpg" alt="">
+                  <img src="assets/img/Cinderella/IMG_6797.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/MurderBusiness/73658449708001_n.jpg" alt="">
+                  <img src="assets/img/Cinderella/IMG_6800.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/MurderBusiness/774171853699918_n.jpg" alt="">
+                  <img src="assets/img/Cinderella/IMG_6804.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/MurderBusiness/84055732535_n.jpg" alt="">
+                  <img src="assets/img/Cinderella/IMG_6805.JPG" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/MurderBusiness/843363665827106_n.jpg" alt="">
-                </div> -->
+                  <img src="assets/img/Cinderella/IMG_6813.jpg" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/Cinderella/IMG_6819.JPG" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/Cinderella/IMG_6826.JPG" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/Cinderella/IMG_6829.JPG" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/Cinderella/IMG_6830.jpg" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/Cinderella/IMG_6837.jpg" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/Cinderella/IMG_6840.jpg" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/Cinderella/IMG_6844.jpg" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/Cinderella/IMG_6849.jpg" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/Cinderella/IMG_6862.jpg" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/Cinderella/IMG_6879.jpg" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/Cinderella/IMG_6893.jpg" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/Cinderella/IMG_6929.JPG" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/Cinderella/IMG_6935.JPG" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/Cinderella/IMG_6937.jpg" alt="">
+                </div>
 
               </div>
               <div class="swiper-pagination"></div>
