--- a/Cinderella2023-details.html
+++ b/Cinderella2023-details.html
@@ -70,12 +70,12 @@
               <li><a href="#">Drop Down 4</a></li>
             </ul> -->
           </li>
-          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+          <li><a class="nav-link scrollto" href="index.html#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
 
-      <a href="#about" class="get-started-btn scrollto">Next Show</a>
+      <a href="index.html#about" class="get-started-btn scrollto">Next Show</a>
 
     </div>
   </header><!-- End Header -->
