--- a/RobinHood-details.html
+++ b/RobinHood-details.html
@@ -75,7 +75,7 @@
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
 
-      <a href="index.html#about" class="get-started-btn scrollto">Next Show</a>
+      <a href="index.html#nextshow" class="get-started-btn scrollto">Next Show</a>
 
     </div>
   </header><!-- End Header -->
