--- a/index.html
+++ b/index.html
@@ -796,14 +796,15 @@
 
         <div class="row">
 
-          <div class="col-lg-2 col-md-4 d-flex align-items-stretch">
+          <!-- <div class="col-lg-4 col-md-5 d-flex align-items-stretch justify-content-center"> -->
+          <div class="col-lg-4 col-md-5 justify-content-center">
             <div class="member" data-aos="fade-up" data-aos-delay="100">
               <div class="member-img">
-                <img src="assets/img/Auditions/Singing.gif" class="img-fluid" alt="">
+                <img src="assets/img/padsAdvert.jpg" class="img-fluid" alt="">
               </div>
               <div class="member-info">
-                <h4>Oliver!, Sound of Music and Mary Poppins</h4>
-                <span><p>Our next show will be held at Paulton Rovers and will be a musical based project. Containing songs from your favourite musicals</p></span>
+                <!-- <h4>Oliver!, Sound of Music and Mary Poppins</h4>
+                <span><p>Our next show will be held at Paulton Rovers and will be a musical based project. Containing songs from your favourite musicals</p></span> -->
               </div>
             </div>
           </div>
