--- a/index.html
+++ b/index.html
@@ -792,6 +792,7 @@
         <div class="section-title">
           <h2>Coming Up!</h2>
           <p>Musical through the ages - 22nd - 23rd September 2023</p>
+          <p>Click on the image for tickets!</p>
         </div>
 
         <div class="row">
@@ -800,7 +801,9 @@
           <div class="col-lg-4 col-md-5 justify-content-center">
             <div class="member" data-aos="fade-up" data-aos-delay="100">
               <div class="member-img">
-                <img src="assets/img/padsAdvert.jpg" class="img-fluid" alt="">
+                <a href="https://www.ticketsource.co.uk/paultonamateurdramatics" target="_blank" rel="noopener noreferrer">
+                  <img src="assets/img/padsAdvert2.jpg" class="img-fluid" alt="">
+                </a>
               </div>
               <div class="member-info">
                 <!-- <h4>Oliver!, Sound of Music and Mary Poppins</h4>
