Updated Robin Hood write-up

--- a/RobinHood-details.html
+++ b/RobinHood-details.html
@@ -137,7 +137,8 @@
             <div class="portfolio-description">
               <h2>This is an example of show detail</h2>
               <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+                Can Robin and his band of bumbling outlaws defeat the evil sheriff and stop him from chopping down Nottingham Forest to make a golf club, and taxing
+                all the villagers? It may have to be feisty Maid Marian and her trusty sidekicks to the rescue.
               </p>
             </div>
           </div>
