Robin hood title update

--- a/RobinHood-details.html
+++ b/RobinHood-details.html
@@ -135,7 +135,7 @@
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>This is an example of show detail</h2>
+              <h2>A golf course!?</h2>
               <p>
                 Can Robin and his band of bumbling outlaws defeat the evil sheriff and stop him from chopping down Nottingham Forest to make a golf club, and taxing
                 all the villagers? It may have to be feisty Maid Marian and her trusty sidekicks to the rescue.
