--- a/index.html
+++ b/index.html
@@ -794,7 +794,7 @@
           <p>Musical through the ages - 22nd - 23rd September 2023</p>
           <p>Click on the image for tickets!</p>
         </div>
-
+        
         <div class="row">
 
           <!-- <div class="col-lg-4 col-md-5 d-flex align-items-stretch justify-content-center"> -->
@@ -811,6 +811,8 @@
               </div>
             </div>
           </div>
+          <p></p>
+          <iframe src="https://calendar.google.com/calendar/embed?src=thepadsgroup%40gmail.com&ctz=Europe%2FLondon" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
 
         </div>
 
