--- a/index.html
+++ b/index.html
@@ -325,6 +325,18 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
+              <img src="assets/img/padsAdvert2.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Musical Showcase</h4>
+                <div class="portfolio-links">
+                  <a href="MusicalShowcase-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
               <img src="assets/img/portfolio/Cinderella2023.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Cinderella 2023</h4>
@@ -791,8 +803,8 @@
 
         <div class="section-title">
           <h2>Coming Up!</h2>
-          <p>Musical through the ages - 22nd - 23rd September 2023</p>
-          <p>Click on the image for tickets!</p>
+          <p>Snow White - October 2023</p>
+          <p>PADs Pantomime</p>
         </div>
         
         <div class="row">
@@ -801,8 +813,8 @@
           <div class="col-lg-4 col-md-5 justify-content-center">
             <div class="member" data-aos="fade-up" data-aos-delay="100">
               <div class="member-img">
-                <a href="https://www.ticketsource.co.uk/paultonamateurdramatics" target="_blank" rel="noopener noreferrer">
-                  <img src="assets/img/padsAdvert2.jpg" class="img-fluid" alt="">
+                <!-- <a href="https://www.ticketsource.co.uk/paultonamateurdramatics" target="_blank" rel="noopener noreferrer"> -->
+                  <img src="assets/img/Snowwhite.jpg" class="img-fluid" alt="">
                 </a>
               </div>
               <div class="member-info">
