--- a/MusicalShowcase-details.html
+++ b/MusicalShowcase-details.html
@@ -116,11 +116,11 @@
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/MusicalShowcase/MS3small.jpg" alt="">
+                  <img src="assets/img/MusicalShowcase/MS3small.JPG" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/MusicalShowcase/MS4small.jpg" alt="">
+                  <img src="assets/img/MusicalShowcase/MS4small.JPG" alt="">
                 </div>
 
                 <div class="swiper-slide">
