--- a/MusicalShowcase-details.html
+++ b/MusicalShowcase-details.html
@@ -216,37 +216,19 @@
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>The cast and the story</h2>
-              <p>TBC</p> 
-              <p>The Cast:</p>
-              <!-- <ul>
-                <li><b>Cinderella:</b> Sadie Stephens</li>
-                <li><b>Prince:</b> Sadie Potts</li>
-                <li><b>Buttons:</b> Austin Stephens</li>
-                <li><b>Ugly Sister 1:</b> Joe Mitchell</li>
-                <li><b>Ugly Sister 2:</b> Greg Entwistle</li>
-                <li><b>Ugly Sister 3:</b> James Cradock</li>
-                <li><b>Fairy Godmother 1:</b> Amy Rogers</li>
-                <li><b>Fairy Godmother 2:</b> Ian Rogers</li>
-                <li><b>Wicked Stepmother:</b> Gemma Turner</li>
-                <li><b>Baron:</b> Martin Nosworthy</li>
-                <li><b>King:</b> John Turner</li>
-                <li><b>Queen:</b> Amanda Ivic</li>
-                <li><b>Dandini:</b> Allegra Nosworthy</li>
-                <li><b>Right Hand Man:</b> Keira Ferris</li>
-                <li><b>Compere 1:</b> Sue Granger</li>
-                <li><b>Compere 2:</b> Katrina Brimble</li>
-                <li><b>Cinderella Friend 1:</b> Georgia Pearce</li>
-                <li><b>Cinderella Friend 2:</b> Ulali Walker</li>
-                <li><b>Villagers:</b> Grace Coles, Anthony Brimble, Cadence Nosworthy, Oscar Mitchell, Lucas Mitchell, Orlaith Mitchell,
-                Olivia Mitchell, Oliver Roberts, Calley Potts, Tiah Banjar, Harrison Pearce, Nerine Brimble, Esme Matthews</li>
-                <li><b>Mice:</b> Jasmine Campbell-Wrighton, Shoshoni Walker, Hania Walker, Amber Roberts, Evie Kimberley</li>
-              </ul> -->
-              <ul>
-                <!-- <li><b>Directors/Producers:</b> Gemma Turn, Gemma , Sadie Stephens, Amy Payne</li> -->
-                <li><b>Technical:</b> Andy Patterson, Josef Harle</li>
-              </ul>
-              </p>
+              <h2>In support of Dorothy House</h2>
+              <p>The Musical Showcase was performed in memory of Isobel Jane Powell (Jane) one of the
+                founding members of PADs who played Nancy in our very first production - Oliver!</p>
+              <p>"Jane, my girl, she had time for people no matter what was happening at home. PADs brought out another 
+                side of her. She loved to make people laugh and what a voice. Boy, could she sing! She did not deserve to 
+                have an end like she did. I could myself lucky to have had her as a friend. Long may she live in other's 
+                memories, Love mum xx"</p>
+              <p>"Isobel Jane Powell, know to all as Jane.. Loving daughter, sister, wife, mum and grandmother. Joined PADs 
+                when it was first created. She put a lot of energy into acting, singing and committee to raise not only 
+                laughter but money for charities. Her fun and warmth touched those around her and everyon adored her. 
+                Hence the performance this month in her honour. RIP my darling daughter, we will never forget you. 
+                19th September 1966 - 17th September 2018."</p>
+              <p>A collection for Dorothy House was made after each show. We miss her always and remember her with love and fondness.</p>
             </div>
           </div>
 
