Add snowwhite poster

--- a/index.html
+++ b/index.html
@@ -803,7 +803,7 @@
 
         <div class="section-title">
           <h2>Coming Up!</h2>
-          <p>Snow White - October 2023</p>
+          <p>Snow White - February 2024</p>
           <p>PADs Pantomime</p>
         </div>
         
@@ -814,7 +814,7 @@
             <div class="member" data-aos="fade-up" data-aos-delay="100">
               <div class="member-img">
                 <!-- <a href="https://www.ticketsource.co.uk/paultonamateurdramatics" target="_blank" rel="noopener noreferrer"> -->
-                  <img src="assets/img/Snowwhite.jpg" class="img-fluid" alt="">
+                  <img src="assets/img/Snowwhite2.jpg" class="img-fluid" alt="">
                 </a>
               </div>
               <div class="member-info">
