Add ticket details

--- a/index.html
+++ b/index.html
@@ -813,8 +813,8 @@
           <div class="col-lg-4 col-md-5 justify-content-center">
             <div class="member" data-aos="fade-up" data-aos-delay="100">
               <div class="member-img">
-                <!-- <a href="https://www.ticketsource.co.uk/paultonamateurdramatics" target="_blank" rel="noopener noreferrer"> -->
-                  <img src="assets/img/Snowwhite2.jpg" class="img-fluid" alt="">
+                <a href="https://www.ticketsource.co.uk/paultonamateurdramatics" target="_blank" rel="noopener noreferrer">
+                  <img src="assets/img/ticketsSW.jpg" class="img-fluid" alt="">
                 </a>
               </div>
               <div class="member-info">
