Updated Teams page

--- a/index.html
+++ b/index.html
@@ -698,11 +698,11 @@
           <div class="col-lg-2 col-md-4 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="400">
               <div class="member-img">
-                <img src="assets/img/team/Ian.jpg" class="img-fluid" alt="">
+                <img src="assets/img/team/AmyR.JPG" class="img-fluid" alt="">
               </div>
               <div class="member-info">
-                <h4>Ian Rogers</h4>
-                <span>Musical Director</span>
+                <h4>Amy Rogers</h4>
+                <span>Choregraphy Director, Fundraising and Social Events</span>
               </div>
             </div>
           </div>
@@ -714,7 +714,7 @@
               </div>
               <div class="member-info">
                 <h4>Josef Harle</h4>
-                <span>Technical Sound Director</span>
+                <span>Technical Sound and Music Director</span>
               </div>
             </div>
           </div>
@@ -770,7 +770,7 @@
           <div class="col-lg-2 col-md-4 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="100">
               <div class="member-img">
-                <img src="assets/img/team/Amy.JPG" class="img-fluid" alt="">
+                <img src="assets/img/team/Amy.jpeg" class="img-fluid" alt="">
               </div>
               <div class="member-info">
                 <h4>Sadie Potts/Amy Payne</h4>
