--- a/index.html
+++ b/index.html
@@ -335,6 +335,18 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
+              <img src="assets/img/ticketsSW.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>SnowWhite</h4>
+                <div class="portfolio-links">
+                  <a href="SnowWhite.html" title="More Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
               <img src="assets/img/padsAdvert2.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Musical Showcase</h4>
@@ -813,8 +825,8 @@
 
         <div class="section-title">
           <h2>Coming Up!</h2>
-          <p>Snow White - February 2024</p>
-          <p>PADs Pantomime</p>
+          <p>Charlie and the Chocolate Factory - June 2024</p>
+          <p>Children's show</p>
         </div>
         
         <div class="row">
@@ -823,8 +835,8 @@
           <div class="col-lg-4 col-md-5 justify-content-center">
             <div class="member" data-aos="fade-up" data-aos-delay="100">
               <div class="member-img">
-                <a href="https://www.ticketsource.co.uk/paultonamateurdramatics" target="_blank" rel="noopener noreferrer">
-                  <img src="assets/img/ticketsSW.jpg" class="img-fluid" alt="">
+                <!-- <a href="https://www.ticketsource.co.uk/paultonamateurdramatics" target="_blank" rel="noopener noreferrer"> -->
+                  <img src="assets/img/CATCF.JPG" class="img-fluid" alt="">
                 </a>
               </div>
               <div class="member-info">
