Update with testindex, removed calendar

--- a/indextest.html
+++ b/indextest.html
@@ -494,58 +494,58 @@
 
         <div class="row">
 
-          <div class="flip-container" ontouchstart="if (!window.__cfRLUnblockHandlers) return false; this.classList.toggle('hover');" data-cf-modified-ad8cc49e57e3e073cfba8f87-="">
-            <div class="flipper">
-              <div class="front" style="background: url(assets/img/team/Clare.jpg) no-repeat; background-size: cover;"></div>
-              <div class="back" style="background:#f8f8f8;">
-                <div class="back-logo"></div>
-                <div class="back-title">Clare Ivory</div>
-                <p>Mozilla Web Developer, MooTools & jQuery Consultant, MooTools Core Developer, Javascript Fanatic, CSS Tinkerer, PHP Hacker, and web lover.</p>
-              </div>
+          <div class="flipcontainer d-flex align-items-center justify-content-center flex-wrap">
+            <div class="box">
+                <div class="body">
+                    <div class="imgContainer">
+                        <img src="assets/img/team/Clare.jpg" alt="">
+                    </div>
+                    <div class="content d-flex flex-column align-items-center justify-content-center">
+                        <div>
+                            <h3 class="text-white fs-5">Post Title</h3>
+                            <p class="fs-6 text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo sed cum neque, rem provident ex. Laboriosam perspiciatis modi eveniet in?</p>
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
-
-          <div class="flip-container" ontouchstart="if (!window.__cfRLUnblockHandlers) return false; this.classList.toggle('hover');" data-cf-modified-ad8cc49e57e3e073cfba8f87-="">
-            <div class="flipper">
-              <div class="front" style="background: url(assets/img/team/Gemma.jpg) no-repeat; background-size: cover;"></div>
-              <div class="back" style="background:#f8f8f8;">
-                <div class="back-logo"></div>
-                <div class="back-title">Gemma Turner</div>
-                <p>Mozilla Web Developer, MooTools & jQuery Consultant, MooTools Core Developer, Javascript Fanatic, CSS Tinkerer, PHP Hacker, and web lover.</p>
-              </div>
+            <div class="box">
+                <div class="body">
+                    <div class="imgContainer">
+                        <img src="assets/img/team/Clare.jpg" alt="">
+                    </div>
+                    <div class="content d-flex flex-column align-items-center justify-content-center">
+                        <div>
+                            <h3 class="text-white fs-5">Post Title</h3>
+                            <p class="fs-6 text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo sed cum neque, rem provident ex. Laboriosam perspiciatis modi eveniet in?</p>
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
-
-          <div class="flip-container" ontouchstart="if (!window.__cfRLUnblockHandlers) return false; this.classList.toggle('hover');" data-cf-modified-ad8cc49e57e3e073cfba8f87-="">
-            <div class="flipper">
-              <div class="front" style="background: url(assets/img/team/Anne.JPG) no-repeat; background-size: cover;"></div>
-              <div class="back" style="background:#f8f8f8;">
-                <div class="back-logo"></div>
-                <div class="back-title">Anne Coppard</div>
-                <p>Mozilla Web Developer, MooTools & jQuery Consultant, MooTools Core Developer, Javascript Fanatic, CSS Tinkerer, PHP Hacker, and web lover.</p>
-              </div>
+            <div class="box">
+                <div class="body">
+                    <div class="imgContainer">
+                        <img src="assets/img/team/Clare.jpg" alt="">
+                    </div>
+                    <div class="content d-flex flex-column align-items-center justify-content-center">
+                        <div>
+                            <h3 class="text-white fs-5">Post Title</h3>
+                            <p class="fs-6 text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo sed cum neque, rem provident ex. Laboriosam perspiciatis modi eveniet in?</p>
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
-
-          <div class="flip-container" ontouchstart="if (!window.__cfRLUnblockHandlers) return false; this.classList.toggle('hover');" data-cf-modified-ad8cc49e57e3e073cfba8f87-="">
-            <div class="flipper">
-              <div class="front" style="background: url(assets/img/team/Clare.jpg) no-repeat; background-size: cover;"></div>
-              <div class="back" style="background:#f8f8f8;">
-                <div class="back-logo"></div>
-                <div class="back-title">Clare Ivory</div>
-                <p>Mozilla Web Developer, MooTools & jQuery Consultant, MooTools Core Developer, Javascript Fanatic, CSS Tinkerer, PHP Hacker, and web lover.</p>
-              </div>
-            </div>
-          </div>
-          <!-- End Test Card -->
+        </div>
 
           <div class="col-lg-2 col-md-4 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="100">
               <div class="member-img">
-                <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
-            <div class="flipper">
-              <div class="front">
                 <img src="assets/img/team/Clare.jpg" class="img-fluid" alt="">
+                <!-- <div class="social">
+                  <a href=""><i class="bi bi-twitter"></i></a>
+                  <a href=""><i class="bi bi-facebook"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div> -->
               </div>
               <div class="member-info">
                 <h4>Clare Ivory</h4>
@@ -553,11 +553,6 @@
               </div>
             </div>
           </div>
-          <div class="back">
-            <p>Some words</p>
-          </div>
-        </div>
-      </div>
 
           <div class="col-lg-2 col-md-4 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="200">
@@ -723,9 +718,6 @@
               </div>
             </div>
           </div>
-          <p></p>
-          <iframe src="https://calendar.google.com/calendar/embed?src=thepadsgroup%40gmail.com&ctz=Europe%2FLondon" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
-
         </div>
 
       </div>
